ledger/sparse-struct/tests/ui/struct-variant.stderr
error: `SparseStruct` can only be derived for enums containing newtype variants (tuple variants with a single type).
 --> tests/ui/struct-variant.rs:6:5
  |
6 |     VariantB {
  |     ^^^^^^^^
